# storage/api-docs/api-docs.json
@@ -1513,6 +1513,64 @@
                 ]
             }
         },
+        "/api/v1/user/bulk_upload_users": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Carga masiva de usuarios",
+                "operationId": "4ff210feb3beb1bca0910ddc290d0c33",
+                "parameters": [
+                    {
+                        "name": "file",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    {
+                        "name": "subcompanies_id",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "example": {
+                                        "message": "Usuarios cargados correctamente"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Failed",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "example": {
+                                        "message": "Mensaje de error"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
         "/api/v1/group/store": {
             "post": {
                 "tags": [
